--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
-  "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install"
+  "framework": "vite",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev"
 }
